[shenker/image_analysis] Commit pipeline notebooks from two months ago.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240301 FISH pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240301 FISH pipeline.ipynb
@@ -83,10 +83,13 @@
    "outputs": [],
    "source": [
     "# import paulssonlab.image_analysis.mosaic as mosaic\n",
+    "import paulssonlab.image_analysis.delayed as delayed\n",
     "import paulssonlab.image_analysis.drift as drift\n",
     "import paulssonlab.image_analysis.geometry as geometry\n",
     "import paulssonlab.image_analysis.image as image\n",
+    "import paulssonlab.image_analysis.pipeline as pipeline\n",
     "import paulssonlab.image_analysis.readers as readers\n",
+    "import paulssonlab.image_analysis.segmentation.watershed as watershed\n",
     "import paulssonlab.image_analysis.trench_detection as trench_detection\n",
     "import paulssonlab.image_analysis.util as util\n",
     "import paulssonlab.image_analysis.workflow as workflow\n",
@@ -129,8 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filename = \"/home/jqs1/scratch/microscopy/230915/230915_RBS_repressors.nd2\"\n",
-    "filename = workflow.SplitFilename(\n",
+    "# nd2_filename = \"/home/jqs1/scratch/microscopy/230915/230915_RBS_repressors.nd2\"\n",
+    "nd2_filename = workflow.SplitFilename(\n",
     "    sorted(\n",
     "        glob.glob(\n",
     "            # \"/home/jqs1/scratch/jqs1/microscopy/230619/230619_NAO745_repressilators_split.nd2*\"\n",
@@ -139,9 +142,9 @@
     "        )\n",
     "    )\n",
     ")\n",
-    "assert filename.files\n",
-    "# filename = \"/home/jqs1/scratch/jqs1/microscopy/231101/231101_FP_calibration.nd2\"\n",
-    "fish_filename = Path(filename).parent / \"FISH/real_run\""
+    "assert nd2_filename.files\n",
+    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/231101/231101_FP_calibration.nd2\"\n",
+    "fish_filename = Path(nd2_filename).parent / \"FISH/real_run\""
    ]
   },
   {
@@ -151,8 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2 = workflow.get_nd2_reader(filename)\n",
-    "t_max = nd2.sizes[\"t\"]"
+    "output_dir = Path(nd2_filename).parent / \"test\"\n",
+    "# output_dir.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -162,7 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2.sizes"
+    "nd2 = workflow.get_nd2_reader(nd2_filename)\n",
+    "t_max = nd2.sizes[\"t\"]"
    ]
   },
   {
@@ -172,13 +176,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2.metadata[\"channels\"]"
+    "nd2.sizes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.metadata[\"channels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -206,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,21 +268,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "# Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = Path(filename).parent / \"test\"\n",
-    "output_dir.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -278,11 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_channel = \"RFP-PENTA\"\n",
-    "trench_detection_channel = segmentation_channel  # channel for trench detection, almost always same as segmentation_channel\n",
-    "# measure_channels = [\"RFP-PENTA\", \"YFP-DUAL\"]\n",
-    "measure_channels = [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"]\n",
-    "fish_channels = [\"RFP-PENTA\", \"Cy5-PENTA\", \"Cy7\"]"
+    "# k1 = 1e-9\n",
+    "# center = image.center_from_shape(nd2.get_frame_2D().shape) - np.array([0, -500])"
    ]
   },
   {
@@ -292,13 +292,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_channel = \"RFP-EM\"\n",
-    "measurement_channels = [\"CFP-EM\", \"YFP-EM\", \"RFP-EM\"]\n",
-    "channel_colors = [colors[channel] for channel in measurement_channels]\n",
-    "width_to_pitch_ratio = 1.4 / 3.5\n",
-    "# k1 = 8.947368421052635e-10\n",
-    "k1 = 1e-9\n",
-    "center = image.center_from_shape(nd2.get_frame_2D().shape) - np.array([0, -500])"
+    "config = {\n",
+    "    # \"composite_func\": image.mean_composite,\n",
+    "    # \"roi_detection_func\": trench_detection.find_trenches,\n",
+    "    # \"track_drift\": True,\n",
+    "    # \"segmentation_func\": watershed.watershed_segment,\n",
+    "    \"segmentation_channels\": [\"RFP-PENTA\"],\n",
+    "    \"trench_detection_channel\": segmentation_channel,  # channel for trench detection, almost always same as segmentation_channel\n",
+    "    # \"measure_channels\": = [\"RFP-PENTA\", \"YFP-DUAL\"],\n",
+    "    \"crop_channels\": [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    \"measure_channels\": [\"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    # \"fish_probes\": hhh,\n",
+    "    \"roi_detection_kwargs\": {\"width_to_pitch_ratio\": 1.4 / 3.5},\n",
+    "    # \"preprocessing_kwargs\": {\"k1\": k1, \"center\": center},\n",
+    "}"
    ]
   },
   {
@@ -330,6 +337,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "p = pipeline.DefaultPipeline(output_dir, config=config)\n",
+    "\n",
+    "for msg in readers.send_nd2(\n",
+    "    nd2_filename,\n",
+    "    slices=dict(t=[0], v=[8]),\n",
+    "    delayed=True,\n",
+    "):\n",
+    "    p.handle_message(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for msg in readers.send_eaton_fish(\n",
+    "    fish_filename,\n",
+    "    slices=dict(t=None, v=[8]),\n",
+    "    delayed=True,\n",
+    "):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "# %%pyinstrument\n",
     "ts = np.arange(t_max)\n",
@@ -356,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -425,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -485,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "40",
    "metadata": {
     "tags": []
    },
@@ -574,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "43",
    "metadata": {
     "tags": []
    },
@@ -630,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "44",
    "metadata": {
     "tags": []
    },
@@ -642,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "45",
    "metadata": {
     "tags": []
    },
@@ -654,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "48",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -686,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -699,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -724,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "51",
    "metadata": {
     "tags": []
    },
@@ -739,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -751,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -763,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -775,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "55",
    "metadata": {
     "tags": []
    },
@@ -796,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "56",
    "metadata": {
     "tags": []
    },
@@ -808,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "57",
    "metadata": {
     "tags": []
    },
@@ -820,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "58",
    "metadata": {
     "tags": []
    },
@@ -832,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "59",
    "metadata": {
     "tags": []
    },
@@ -846,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "60",
    "metadata": {
     "tags": []
    },
@@ -858,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "61",
    "metadata": {
     "tags": []
    },
@@ -870,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "62",
    "metadata": {
     "tags": []
    },
@@ -882,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "63",
    "metadata": {
     "tags": []
    },
@@ -895,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "64",
    "metadata": {
     "tags": []
    },
@@ -907,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "65",
    "metadata": {
     "tags": []
    },
@@ -919,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "66",
    "metadata": {
     "tags": []
    },
@@ -931,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -943,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -955,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -967,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -987,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -1008,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -1020,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -1042,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1054,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1080,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1092,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1144,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1167,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1182,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1194,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1208,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1222,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1236,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "86",
    "metadata": {
     "tags": []
    },
