[image_analysis,shenker/image_analysis] WIP pipeline.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240427 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240427 Pipeline.ipynb
@@ -292,18 +292,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_frame_func(\n",
-    "    filename, position, channel, t, k1=None, center=None, dark=None, flat=None\n",
+    "# def get_frame_func(\n",
+    "#     filename, position, channel, t, k1=None, center=None, dark=None, flat=None\n",
+    "# ):\n",
+    "#     img = np.asarray(\n",
+    "#         workflow.get_nd2_frame(\n",
+    "#             filename, position=position, channel=channel, t=t, dark=dark, flat=flat\n",
+    "#         )\n",
+    "#     )\n",
+    "#     if k1 is not None:\n",
+    "#         img = image.correct_radial_distortion(img, k1=k1, center=center)\n",
+    "#     # TODO\n",
+    "#     img = img[:, 300 : img.shape[1] - 300]\n",
+    "#     return img\n",
+    "\n",
+    "\n",
+    "def preprocess_func(\n",
+    "    img, filename, position, channel, t, k1=None, center=None, dark=None, flat=None\n",
     "):\n",
-    "    img = np.asarray(\n",
-    "        workflow.get_nd2_frame(\n",
-    "            filename, position=position, channel=channel, t=t, dark=dark, flat=flat\n",
-    "        )\n",
-    "    )\n",
-    "    if k1 is not None:\n",
-    "        img = image.correct_radial_distortion(img, k1=k1, center=center)\n",
-    "    # TODO\n",
-    "    img = img[:, 300 : img.shape[1] - 300]\n",
     "    return img"
    ]
   },
@@ -319,13 +325,14 @@
     "    # \"roi_detection_func\": trench_detection.find_trenches,\n",
     "    # \"track_drift\": True,\n",
     "    # \"segmentation_func\": watershed.watershed_segment,\n",
-    "    \"segmentation_channels\": [\"RFP-PENTA\"],\n",
+    "    \"segmentation_channels\": [\"RFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
     "    \"trench_detection_channels\": None,  # channel for trench detection, almost always same as segmentation_channel\n",
     "    # \"measure_channels\": = [\"RFP-PENTA\", \"YFP-DUAL\"],\n",
     "    \"crop_channels\": [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
     "    \"measure_channels\": [\"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
     "    # \"fish_probes\": hhh,\n",
     "    \"roi_detection_kwargs\": {\"width_to_pitch_ratio\": 1.4 / 3.5},\n",
+    "    # \"preprocess_func\": preprocess_func,\n",
     "    # \"preprocessing_kwargs\": {\"k1\": k1, \"center\": center},\n",
     "}"
    ]
@@ -334,46 +341,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import paulssonlab.util.core as core"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(core.iter_recursive([1, 2]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(core.iter_recursive([1, [2, 3, {\"x\": \"y\", \"z\": [77, (88, 99)]}], {\"a\": \"b\"}]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\"a\": \"b\"}.keys().__class__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,11 +357,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.raw_frames.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.processed_frames.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.raw_frames[(8, \"RFP-EM\", 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p"
+    "p.measurements.keys()"
    ]
   },
   {
