[shenker/image_analysis,image_analysis] WIP pipeline. Successfully calls find_trenches, though trench finding fails.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240428 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240428 Pipeline.ipynb
@@ -344,12 +344,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = pipeline.DefaultPipeline(output_dir, config=config)\n",
+    "delayed = False\n",
+    "\n",
+    "p = pipeline.DefaultPipeline(output_dir, config=config, delayed=delayed)\n",
     "\n",
     "for msg in readers.send_nd2(\n",
     "    nd2_filename,\n",
     "    slices=dict(t=[0], v=[8]),\n",
-    "    delayed=True,\n",
+    "    delayed=delayed,\n",
     "):\n",
     "    p.handle_message(msg)"
    ]
