--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240428 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240428 Pipeline.ipynb
@@ -344,6 +344,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "p._queue._items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "delayed = False\n",
     "\n",
     "p = pipeline.DefaultPipeline(output_dir, config=config, delayed=delayed)\n",
@@ -359,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +400,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.rois[(8, 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# diag = util.tree()\n",
+    "diag = None\n",
+    "img = p.rois[(8, \"RFP-EM\", 0)]\n",
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    img,\n",
+    "    # angle=np.deg2rad(0.001),\n",
+    "    join_info=False,\n",
+    "    width=12,\n",
+    "    # width_to_line_width_ratio=2,\n",
+    "    # width_to_pitch_ratio=None,\n",
+    "    # peak_func=trench_detection.peaks.find_peaks,\n",
+    "    diagnostics=diag,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "41",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -522,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "45",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -582,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -671,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -727,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -739,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "55",
    "metadata": {
     "tags": []
    },
@@ -751,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "58",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -783,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "59",
    "metadata": {
     "tags": []
    },
@@ -796,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "60",
    "metadata": {
     "tags": []
    },
@@ -821,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "61",
    "metadata": {
     "tags": []
    },
@@ -836,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "62",
    "metadata": {
     "tags": []
    },
@@ -848,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "63",
    "metadata": {
     "tags": []
    },
@@ -860,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "64",
    "metadata": {
     "tags": []
    },
@@ -872,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "65",
    "metadata": {
     "tags": []
    },
@@ -893,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "66",
    "metadata": {
     "tags": []
    },
@@ -905,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -917,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -929,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -943,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -955,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -967,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -979,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -992,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1004,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1016,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1028,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1040,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1052,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1064,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1084,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1105,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1117,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1139,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1151,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1177,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1189,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1241,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1264,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1279,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1291,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1305,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1319,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1333,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "96",
    "metadata": {
     "tags": []
    },
