[shenker/image_analysis,image_analysis] Use weakref.ref and weakref.finalize in DelayedQueue to avoid duplicated DelayedCallables. Still need to modify DelayedStore to hold references to DelayedCallables we want to keep alive.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240429 Delayed.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240429 Delayed.ipynb
@@ -343,6 +343,99 @@
    "source": [
     "s.value"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85abefb5-330a-446f-93de-dbb969be1f61",
+   "metadata": {},
+   "source": [
+    "## WeakSet queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e4618fc-0f5f-44ae-add5-0e6b706659ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weakref"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f103360-9fca-443c-a1b7-e6ed7bece2be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?delayed.DelayedCallable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de95ac0c-2eee-42d7-b711-f12c4de3eadb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = delayed.DelayedCallable(func=lambda: print(\"A\"))\n",
+    "b = delayed.DelayedCallable(func=lambda: print(\"B\"))\n",
+    "c = delayed.DelayedCallable(func=lambda: print(\"C\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6d3c7c-c88d-445c-80dc-6fde012f50b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue = delayed.DelayedQueue()\n",
+    "a = delayed.DelayedValue()\n",
+    "b = queue.delayed(lambda x: print(\"B\"), a)\n",
+    "c = queue.delayed(lambda x: print(\"C\"), b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a927f7fd-cbb4-45c7-8bc9-6b1b828bbe67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd0127c-d0f6-412d-9d13-320e20423fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dadf814-2598-469a-9e75-07c9a2e1cb54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue._items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7726b6b3-fd33-4e50-ac43-094a599262c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue.poll()"
+   ]
   }
  ],
  "metadata": {
