[image_analysis,shenker/image_analysis] WIP pipeline. Added clear_callable kwarg to DelayedCallable.result. Removed delayed setter in DelayedStore.__setitem__, instead we just return the result stored in DelayedCallable. This still needs some thought.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240522 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240522 Pipeline.ipynb
@@ -325,7 +325,8 @@
     "    # \"roi_detection_func\": trench_detection.find_trenches,\n",
     "    # \"track_drift\": True,\n",
     "    # \"segmentation_func\": watershed.watershed_segment,\n",
-    "    \"segmentation_channels\": [\"RFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    # \"segmentation_channels\": [\"RFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    \"segmentation_channels\": [\"RFP-EM\"],\n",
     "    \"trench_detection_channels\": None,  # channel for trench detection, almost always same as segmentation_channel\n",
     "    # \"measure_channels\": = [\"RFP-PENTA\", \"YFP-DUAL\"],\n",
     "    \"crop_channels\": [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
