[shenker/image_analysis,image_analysis] WIP pipeline. Removed use of weakrefs in DelayedQueue. Recursively add DelayedCallable dependenciesin DelayedQueue.append, which is called by DelayedStore.__setitem__.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240523 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240523 Pipeline.ipynb
@@ -325,8 +325,8 @@
     "    # \"roi_detection_func\": trench_detection.find_trenches,\n",
     "    # \"track_drift\": True,\n",
     "    # \"segmentation_func\": watershed.watershed_segment,\n",
-    "    # \"segmentation_channels\": [\"RFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
-    "    \"segmentation_channels\": [\"RFP-EM\"],\n",
+    "    \"segmentation_channels\": [\"RFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
+    "    # \"segmentation_channels\": [\"CFP-EM\"],\n",
     "    \"trench_detection_channels\": None,  # channel for trench detection, almost always same as segmentation_channel\n",
     "    # \"measure_channels\": = [\"RFP-PENTA\", \"YFP-DUAL\"],\n",
     "    \"crop_channels\": [\"Phase-Fluor\", \"RFP-EM\", \"GFP-EM\", \"YFP-EM\", \"CFP-EM\"],\n",
@@ -342,16 +342,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p._queue._items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -587,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -647,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -736,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -792,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -804,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -816,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "57",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -848,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "58",
    "metadata": {
     "tags": []
    },
@@ -861,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "59",
    "metadata": {
     "tags": []
    },
@@ -886,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "60",
    "metadata": {
     "tags": []
    },
@@ -901,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "61",
    "metadata": {
     "tags": []
    },
@@ -913,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "62",
    "metadata": {
     "tags": []
    },
@@ -925,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "63",
    "metadata": {
     "tags": []
    },
@@ -937,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "64",
    "metadata": {
     "tags": []
    },
@@ -958,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "65",
    "metadata": {
     "tags": []
    },
@@ -970,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "66",
    "metadata": {
     "tags": []
    },
@@ -982,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -994,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -1008,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -1020,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -1032,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -1044,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -1057,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -1069,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1081,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1093,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1105,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1117,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1129,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "79",
    "metadata": {
     "tags": []
    },
@@ -1149,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "80",
    "metadata": {
     "tags": []
    },
@@ -1170,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "81",
    "metadata": {
     "tags": []
    },
@@ -1182,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "82",
    "metadata": {
     "tags": []
    },
@@ -1204,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1216,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "84",
    "metadata": {
     "tags": []
    },
@@ -1242,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1254,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1306,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1329,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1344,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1356,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1370,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1384,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1398,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "95",
    "metadata": {
     "tags": []
    },
